# opf-renderer

./: .gitignore  README.md  assign_markers_to_bboxes.py  generate_paper_bboxes.py  group_duplicate_markers.py  imageUpdate.py  main.py  marker-dectect.py  prefix_markers_from_bboxes.py  pyproject.toml  view_papers_in_rerun.py  viewer-withdectection.py
sample/: final.csv  paper_bboxes.csv
sample/opf_files/: calibrated_cameras.json  calibrated_control_points.json  camera_list.json  input_cameras.json
