[project]
name = "opf-renderer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.3",
    "opencv-contrib-python>=4.13.0.92",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyopf>=1.4.1",
    "rerun-sdk[all]>=0.30.2",
    "scikit-learn>=1.8.0",
]
